# website

./: CNAME  Makefile  formatter.py  pelicanconf.py  publishconf.py  pyproject.toml
content/: example.md
docs/: an-example-page.html  archives.html  authors.html  categories.html  index.html  tags.html
docs/author/: lacraftsmen.html
docs/category/: misc.html  review.html
theme/static/css/: hero.css  navbar.css  style.css
theme/templates/: base.html  index.html
