[tool.poetry]
name = "lacraftmatt.github.io"
version = "0.1.0"
description = ""
authors = ["krazykirby99999 <krazykirby99999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pelican = {extras = ["markdown"], version = "^4.6.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
